# paprika-mcp

./: .env.example  AGENTS.md  API_REFERENCE.md  README.md  install.sh  openapi.yaml  paprika_client.py  pyproject.toml  requirements.txt  server.py
paprika/: go.mod  main.go
paprika/cmd/: account-login.go  account-login_login.go  categories.go  categories_listCategories.go  groceries.go  groceries_createGroceryItems.go  groceries_listGroceryItems.go  grocerylists.go  grocerylists_listGroceryLists.go  meals.go  meals_listMealPlans.go  pantry.go  pantry_listPantryItems.go  recipes.go  recipes_getRecipe.go  recipes_listRecipes.go  recipes_upsertRecipe.go  root.go  status.go  status_getSyncStatus.go
paprika/internal/: config.go
paprika/internal/client/: client.go
paprika_mcp/: __init__.py  cli.py  client.py  config.py  server.py
