[project]
name = "paprika-mcp"
version = "0.1.0"
description = "FastMCP server for the Paprika Recipe Manager API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Paprika MCP" }
]
dependencies = [
  "fastmcp>=0.1.0",
  "httpx>=0.27.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
paprika-mcp = "paprika_mcp.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
